INCLUDE_DIRECTORIES(../../src ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS falcon_dk_math.c)

IF(LIBUSB_FOUND)
  IF(LIBFTDI_FOUND)
	ADD_EXECUTABLE(falcon_dk_math_libftdi ${SRCS})
	TARGET_LINK_LIBRARIES(falcon_dk_math_libftdi ${LIBNIFALCON_LIBFTDI}_s ${LIBFTDI}_s usb_s m) 
	SET_TARGET_PROPERTIES (falcon_dk_math_libftdi PROPERTIES COMPILE_FLAGS -DLIBFTDI)
	IF(APPLE)
	  SET_TARGET_PROPERTIES (falcon_dk_math_libftdi PROPERTIES LINK_FLAGS "-framework GLUT -framework OpenGL")
	ENDIF(APPLE)
	IF(NOT WIN32)
	  INSTALL(TARGETS falcon_dk_math_libftdi RUNTIME DESTINATION "/usr/local/bin")
	ENDIF(NOT WIN32)
  ENDIF(LIBFTDI_FOUND)
ENDIF(LIBUSB_FOUND)

IF(LIBFTD2XX_FOUND)
  ADD_EXECUTABLE(falcon_dk_math_ftd2xx ${SRCS})
  IF(WIN32)
    TARGET_LINK_LIBRARIES(falcon_dk_math_ftd2xx ${LIBNIFALCON_FTD2XX}_s ${LIBFTD2XX} glut32)
  ELSE(WIN32)
    TARGET_LINK_LIBRARIES(falcon_dk_math_ftd2xx ${LIBNIFALCON_FTD2XX}_s ${LIBFTD2XX} m glut)
  ENDIF(WIN32)
  SET_TARGET_PROPERTIES (falcon_dk_math_ftd2xx PROPERTIES COMPILE_FLAGS -DLIBFTD2XX)
ENDIF(LIBFTD2XX_FOUND)

