INCLUDE_DIRECTORIES(../../src/c ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS falcon_dk_math.c)

IF(LIBFTDI_FOUND)
  ADD_EXECUTABLE(falcon_dk_math_libftdi ${SRCS})
  INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS} ${LIBFTDI_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(falcon_dk_math_libftdi ${LIBNIFALCON_LIBFTDI} ${LIBFTDI_LIBRARIES} m) 
  SET_TARGET_PROPERTIES (falcon_dk_math_libftdi PROPERTIES COMPILE_FLAGS -DLIBFTDI)
  IF(UNIX AND NOT APPLE)
    TARGET_LINK_LIBRARIES(falcon_dk_math_libftdi ${LIBNIFALCON_LIBFTDI} ${LIBFTDI_LIBRARIES} ${GLUT_LIBRARIES} ${LIBMATH}) 
  ENDIF(UNIX AND NOT APPLE)
  IF(APPLE)
    SET_TARGET_PROPERTIES (falcon_dk_math_libftdi PROPERTIES LINK_FLAGS "-framework OpenGL -framework IOKit -framework Carbon -framework GLUT")
  ENDIF(APPLE)
ENDIF(LIBFTDI_FOUND)

IF(LIBFTD2XX_FOUND)
  ADD_EXECUTABLE(falcon_dk_math_ftd2xx ${SRCS})
  INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS} ${LIBFTD2XX_INCLUDE_DIRS})
  SET_TARGET_PROPERTIES (falcon_dk_math_ftd2xx PROPERTIES COMPILE_FLAGS -DLIBFTD2XX)
  TARGET_LINK_LIBRARIES(falcon_dk_math_ftd2xx ${LIBNIFALCON_FTD2XX} ${LIBFTD2XX_LIBRARIES} ${GLUT_LIBRARIES} ${LIBMATH})
  IF(APPLE)
    SET_TARGET_PROPERTIES (falcon_dk_math_ftd2xx PROPERTIES LINK_FLAGS "-framework OpenGL -framework IOKit -framework Carbon -framework GLUT")
  ENDIF(APPLE)
ENDIF(LIBFTD2XX_FOUND)

