IF(APPLE)
  FIND_PACKAGE(OpenGL)
  FIND_PACKAGE(GLUT)
  INCLUDE_DIRECTORIES(../../src/cpp ${INC_DIRS} ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
  LINK_DIRECTORIES(../../lib ${LINK_DIRS})
  SET(SRCS main_opengl.cpp haptics.cpp hdl.cpp)
  ADD_EXECUTABLE(falcon_hdl_ogl ${SRCS})
  SET_COMPILE_FLAGS(falcon_hdl_ogl ${CPP_DEFINES})	
  TARGET_LINK_LIBRARIES(falcon_hdl_ogl ${CPP_LINK_LIBS} nifalcon_kinematic_stamper ${Boost_PROGRAM_OPTIONS_LIBRARY} ${LIBNIFALCON_CPP_UTIL} nifalcon_cpp_device_boostthread nifalcon_cpp_hdal_compat) 
  SET_TARGET_PROPERTIES(falcon_hdl_ogl PROPERTIES LINK_FLAGS "-framework Carbon -framework ApplicationServices -framework OpenGL -framework GLUT")
ENDIF(APPLE)

