INCLUDE_DIRECTORIES(../../src ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS falcon_kinematics_test.c)

IF(LIBUSB_FOUND)
  IF(LIBFTDI_FOUND)
	ADD_EXECUTABLE(falcon_kinematics_test_libftdi ${SRCS})
	TARGET_LINK_LIBRARIES(falcon_kinematics_test_libftdi ${LIBNIFALCON_LIBFTDI} ${LIBFTDI}) 
	SET_TARGET_PROPERTIES (falcon_kinematics_test_libftdi PROPERTIES COMPILE_FLAGS -DLIBFTDI)
	IF(UNIX AND NOT APPLE)
	  TARGET_LINK_LIBRARIES(falcon_kinematics_test_libftdi ${LIBNIFALCON_LIBFTDI} ${LIBFTDI} m) 
	ENDIF(UNIX AND NOT APPLE)
	IF(APPLE)
	  SET_TARGET_PROPERTIES (falcon_kinematics_test_libftdi PROPERTIES LINK_FLAGS "-framework IOKit -framework Carbon")
	ENDIF(APPLE)
  ENDIF(LIBFTDI_FOUND)
ENDIF(LIBUSB_FOUND)

IF(LIBFTD2XX_FOUND)
  ADD_EXECUTABLE(falcon_kinematics_test_ftd2xx ${SRCS})
  SET_TARGET_PROPERTIES (falcon_kinematics_test_ftd2xx PROPERTIES COMPILE_FLAGS -DLIBFTD2XX)
  IF(WIN32)
    TARGET_LINK_LIBRARIES(falcon_kinematics_test_ftd2xx ${LIBNIFALCON_FTD2XX} ${LIBFTD2XX})
  ENDIF(WIN32)
  IF(UNIX AND NOT APPLE)
	TARGET_LINK_LIBRARIES(falcon_kinematics_test_ftd2xx ${LIBNIFALCON_FTD2XX} ${LIBFTD2XX} m) 
  ENDIF(UNIX AND NOT APPLE)
  IF(APPLE)
	TARGET_LINK_LIBRARIES(falcon_kinematics_test_ftd2xx ${LIBNIFALCON_FTD2XX} ${LIBFTD2XX} m) 
	SET_TARGET_PROPERTIES (falcon_kinematics_test_ftd2xx PROPERTIES LINK_FLAGS "-framework IOKit -framework Carbon")
  ENDIF(APPLE)
ENDIF(LIBFTD2XX_FOUND)

