IF(APPLE)
  INCLUDE_DIRECTORIES(../../src/cpp ${INC_DIRS} ${GMTL_INCLUDE_DIR})
  LINK_DIRECTORIES(../../lib ${LINK_DIRS})
  SET(SRCS falcon_mouse.cpp falcon_mouse_osx.cpp)
  ADD_EXECUTABLE(falcon_mouse_osx ${SRCS})
  SET_COMPILE_FLAGS(falcon_mouse_osx ${CPP_DEFINES})	
  TARGET_LINK_LIBRARIES(falcon_mouse_osx ${CPP_LINK_LIBS} nifalcon_kinematic_stamper ${Boost_PROGRAM_OPTIONS_LIBRARY} ${LIBNIFALCON_CPP_UTIL} nifalcon_cpp_device_boostthread) 
  SET_TARGET_PROPERTIES(falcon_mouse_osx PROPERTIES LINK_FLAGS "-framework Carbon -framework ApplicationServices")
ELSE(APPLE)
  IF(UNIX)
	FIND_PACKAGE(X11)
	IF (X11_FOUND)
	  INCLUDE_DIRECTORIES(../../src/cpp ${INC_DIRS} ${X11_INCLUDE_DIR} ${GMTL_INCLUDE_DIR})
	  LINK_DIRECTORIES(../../lib ${LINK_DIRS})
	  SET(SRCS falcon_mouse.cpp falcon_mouse_linux.cpp)
	  
	  ADD_EXECUTABLE(falcon_mouse_x11 ${SRCS})
	  SET_COMPILE_FLAGS(falcon_mouse_x11 ${CPP_DEFINES})	
	  TARGET_LINK_LIBRARIES(falcon_mouse_x11 ${CPP_LINK_LIBS} nifalcon_kinematic_stamper ${X11_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${LIBNIFALCON_CPP_UTIL} ${X11_XTest_LIB} nifalcon_cpp_device_boostthread) 
	ENDIF(X11_FOUND)
  ENDIF(UNIX)
ENDIF(APPLE)

