IF(APPLE)
  SET(SRCS falcon_mouse.cpp falcon_mouse_osx.cpp)
  SET(LINK_LIBS ${CPP_LINK_LIBS} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${LIBNIFALCON_CPP_CLI_BASE} ${LIBNIFALCON_CPP_BOOST_THREAD}) 
  SET(LINK_FLAGS "-framework Carbon -framework ApplicationServices")
  BUILD_NIFALCON_EXE(falcon_mouse_osx "${SRCS}" "${LINK_LIBS}" "${LINK_FLAGS}" "${CPP_DEFINES}" TRUE)
ELSE(APPLE)
  IF(UNIX)
    FIND_PACKAGE(X11)
    IF (X11_FOUND)
      INCLUDE_DIRECTORIES(${INC_DIRS} ${X11_INCLUDE_DIR} ${GMTL_INCLUDE_DIR})
      SET(SRCS falcon_mouse.cpp falcon_mouse_x11.cpp)      
      SET(LINK_LIBS ${CPP_LINK_LIBS} ${X11_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${LIBNIFALCON_CPP_CLI_BASE} ${LIBNIFALCON_CPP_BOOST_THREAD} ${X11_XTest_LIB}) 
      BUILD_NIFALCON_EXE(falcon_mouse_x11 "${SRCS}" "${LINK_LIBS}" FALSE "${CPP_DEFINES}" TRUE)
    ENDIF(X11_FOUND)
  ENDIF(UNIX)
ENDIF(APPLE)

