INCLUDE_DIRECTORIES(../../src/cpp ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS falcon_test_cli.cpp)

ADD_EXECUTABLE(falcon_test_cli ${SRCS})
SET_COMPILE_FLAGS(falcon_test_cli ${CPP_DEFINES})
TARGET_LINK_LIBRARIES(falcon_test_cli ${CPP_LINK_LIBS} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${LIBNIFALCON_CPP_UTIL})
IF(NOT WIN32)
  INSTALL(TARGETS falcon_test_cli RUNTIME DESTINATION ${RUNTIME_INSTALL_DIR})
ENDIF(NOT WIN32)

