INCLUDE_DIRECTORIES(../../src ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS findfalcons.c)
ADD_EXECUTABLE(findfalcons_ftd2xx ${SRCS})
ADD_EXECUTABLE(findfalcons_libftdi ${SRCS})
TARGET_LINK_LIBRARIES(findfalcons_ftd2xx ${LIBNIFALCON_FTD2XX}_s ${LIBFTD2XX})
TARGET_LINK_LIBRARIES(findfalcons_libftdi ${LIBNIFALCON_LIBFTDI}_s ${LIBFTDI}) 
IF(NOT WIN32)
  INSTALL(TARGETS findfalcons_ftd2xx findfalcons_libftdi RUNTIME DESTINATION "/usr/local/bin")
ENDIF(NOT WIN32)
