INCLUDE_DIRECTORIES(../../src ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS findfalcons.c)

IF(LIBUSB_FOUND)
  IF(LIBFTDI_FOUND)
	ADD_EXECUTABLE(findfalcons_libftdi ${SRCS})
	TARGET_LINK_LIBRARIES(findfalcons_libftdi ${LIBNIFALCON_LIBFTDI}_s ${LIBFTDI}) 
	SET_TARGET_PROPERTIES (findfalcons_libftdi PROPERTIES COMPILE_FLAGS -DLIBFTDI)
	IF(NOT WIN32)
	  INSTALL(TARGETS findfalcons_libftdi RUNTIME DESTINATION "/usr/local/bin")
	ENDIF(NOT WIN32)
  ENDIF(LIBFTDI_FOUND)
ENDIF(LIBUSB_FOUND)

IF(LIBFTD2XX_FOUND)
  ADD_EXECUTABLE(findfalcons_ftd2xx ${SRCS})
  TARGET_LINK_LIBRARIES(findfalcons_ftd2xx ${LIBNIFALCON_FTD2XX}_s ${LIBFTD2XX})
  IF(NOT WIN32)
	INSTALL(TARGETS findfalcons_ftd2xx RUNTIME DESTINATION "/usr/local/bin")
  ENDIF(NOT WIN32)
ENDIF(LIBFTD2XX_FOUND)

