INCLUDE_DIRECTORIES(../../src/c ${INC_DIRS})
LINK_DIRECTORIES(../../lib ${LINK_DIRS})
SET(SRCS findfalcons.c)

MACRO(BUILD_FINDFALCONS COMM_TYPE COMM_LIBS)
  SET(FINDFALCONS_C findfalcons_${COMM_TYPE})
  STRING(TOUPPER ${COMM_TYPE} UPPER_COMM_TYPE)
  ADD_EXECUTABLE(${FINDFALCONS_C} ${SRCS})
  TARGET_LINK_LIBRARIES(${FINDFALCONS_C} ${LIBNIFALCON_C_PREFIX}_${COMM_TYPE} ${COMM_LIBS} ${LIBMATH})
  SET_TARGET_PROPERTIES (${FINDFALCONS_C} PROPERTIES COMPILE_FLAGS -D${UPPER_COMM_TYPE})
  IF(NOT WIN32)
    INSTALL(TARGETS findfalcons_libftdi RUNTIME DESTINATION ${RUNTIME_INSTALL_DIR})
  ENDIF(NOT WIN32)
ENDMACRO(BUILD_FINDFALCONS)

IF(LIBFTDI_FOUND)
  BUILD_FINDFALCONS(libftdi ${LIBFTDI_LIBRARIES})
ENDIF(LIBFTDI_FOUND)

IF(LIBFTD2XX_FOUND)
  BUILD_FINDFALCONS(ftd2xx ${LIBFTD2XX_LIBRARIES})
ENDIF(LIBFTD2XX_FOUND)

