SET(LIBRARY_SRCS nifalcon_test_fw.c)
INSTALL(FILES nifalcon.h nifalcon_test_fw.h DESTINATION ${INCLUDE_INSTALL_DIR})

IF(LIBFTD2XX_FOUND)
  SET(FTD2XX_SRCS nifalcon_ftd2xx.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTD2XX_INCLUDE_DIRS})
  ADD_LIBRARY (nifalcon_ftd2xx_static STATIC ${FTD2XX_SRCS})
  ADD_LIBRARY (nifalcon_ftd2xx_shared SHARED ${FTD2XX_SRCS})
  SET_TARGET_PROPERTIES (nifalcon_ftd2xx_static PROPERTIES COMPILE_FLAGS -DLIBFTD2XX)
  SET_TARGET_PROPERTIES (nifalcon_ftd2xx_shared PROPERTIES COMPILE_FLAGS -DLIBFTD2XX)
  SET_TARGET_PROPERTIES (nifalcon_ftd2xx_static PROPERTIES OUTPUT_NAME ${LIBNIFALCON_FTD2XX})
  SET_TARGET_PROPERTIES (nifalcon_ftd2xx_shared PROPERTIES OUTPUT_NAME ${LIBNIFALCON_FTD2XX})
  SET_TARGET_PROPERTIES (nifalcon_ftd2xx_shared PROPERTIES VERSION ${LIBNIFVERSION})

  TARGET_LINK_LIBRARIES(nifalcon_ftd2xx_static ${LIBFTD2XX_LIBRARIES})
  TARGET_LINK_LIBRARIES(nifalcon_ftd2xx_shared ${LIBFTD2XX_LIBRARIES})
  IF(NOT WIN32)
	INSTALL(TARGETS nifalcon_ftd2xx_static nifalcon_ftd2xx_shared LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
	IF(APPLE)
	  SET_TARGET_PROPERTIES(nifalcon_ftd2xx_shared PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})	  
	ENDIF(APPLE)
  ENDIF(NOT WIN32)
ENDIF(LIBFTD2XX_FOUND)


IF(LIBFTDI_FOUND)
  SET(LIBFTDI_SRCS nifalcon_libftdi.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTDI_INCLUDE_DIRS})
  ADD_LIBRARY (nifalcon_libftdi_static STATIC ${LIBFTDI_SRCS})
  ADD_LIBRARY (nifalcon_libftdi_shared SHARED ${LIBFTDI_SRCS})
  SET_TARGET_PROPERTIES (nifalcon_libftdi_static PROPERTIES COMPILE_FLAGS -DLIBFTDI)
  SET_TARGET_PROPERTIES (nifalcon_libftdi_shared PROPERTIES COMPILE_FLAGS -DLIBFTDI)
  SET_TARGET_PROPERTIES (nifalcon_libftdi_static PROPERTIES OUTPUT_NAME ${LIBNIFALCON_LIBFTDI})
  SET_TARGET_PROPERTIES (nifalcon_libftdi_shared PROPERTIES OUTPUT_NAME ${LIBNIFALCON_LIBFTDI})
  SET_TARGET_PROPERTIES (nifalcon_libftdi_shared PROPERTIES VERSION ${LIBNIFVERSION})
  
  TARGET_LINK_LIBRARIES(nifalcon_libftdi_static ${LIBFTDI_LIBRARIES})
  TARGET_LINK_LIBRARIES(nifalcon_libftdi_shared ${LIBFTDI_LIBRARIES})
  IF(NOT WIN32)
	INSTALL(TARGETS nifalcon_libftdi_static nifalcon_libftdi_shared LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
	IF(APPLE)
	  SET_TARGET_PROPERTIES(nifalcon_libftdi_shared PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
	ENDIF(APPLE)
  ENDIF(NOT WIN32)
ENDIF(LIBFTDI_FOUND)

