SET(LIBRARY_SRCS nifalcon_test_fw.c)
INSTALL(FILES nifalcon.h nifalcon_test_fw.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/c/)

IF(LIBFTD2XX_FOUND)
  SET(C_COMM_SRCS nifalcon_ftd2xx.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTD2XX_INCLUDE_DIRS})
  BUILD_NIFALCON_LIB(nifalcon_ftd2xx_c "${BUILD_TYPES}" "${C_COMM_SRCS}" "${LIBFTD2XX_LIBRARIES}" "-DFTD2XX")
ENDIF(LIBFTD2XX_FOUND)

IF(LIBFTDI_FOUND)
  SET(C_COMM_SRCS nifalcon_libftdi.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTDI_INCLUDE_DIRS})
  BUILD_NIFALCON_LIB(nifalcon_libftdi_c "${BUILD_TYPES}" "${C_COMM_SRCS}" "${LIBFTDI_LIBRARIES}" "-DLIBFTDI")
ENDIF(LIBFTDI_FOUND)
