SET(NIF_COMPILE_FLAGS)
SET(NIF_LINK_FLAGS)

INCLUDE_DIRECTORIES("..")

SET(CURRENT_LIBRARY ${LIBNIFALCON_CPP_COMM_LIBFTDI})

IF(LIBFTDI_FOUND)
  INSTALL(FILES FalconCommLibFTDI.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/comm)
  ADD_LIBRARY (${CURRENT_LIBRARY} FalconCommLibFTDI.cpp)    
  SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${CURRENT_LIBRARY})
  SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFVERSION})
  TARGET_LINK_LIBRARIES(${CURRENT_LIBRARY} ${LIBFTDI})
  INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
  IF(APPLE)
    SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
  ENDIF(APPLE)
ENDIF(LIBFTDI_FOUND)

SET(CURRENT_LIBRARY ${LIBNIFALCON_CPP_COMM_FTD2XX})

IF(LIBFTD2XX_FOUND)
    INSTALL(FILES FalconCommFTD2XX.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/comm)
    ADD_LIBRARY (${CURRENT_LIBRARY} FalconCommFTD2XX.cpp)    
    SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${CURRENT_LIBRARY})
    SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFVERSION})
    TARGET_LINK_LIBRARIES(${CURRENT_LIBRARY} ${LIBFTD2XX})
    INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
    IF(APPLE)
      SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
    ENDIF(APPLE)
ENDIF(LIBFTD2XX_FOUND)
