SET(NIF_COMPILE_FLAGS)
SET(NIF_LINK_FLAGS)

INCLUDE_DIRECTORIES("..")

SET(CURRENT_LIBRARY ${LIBNIFALCON_CPP_COMM_LIBFTDI})

MACRO(BUILD_NIFALCON_CPP_COMM COMM_NAME COMM_LIBS)
  STRING(TOLOWER ${COMM_NAME} LOWER_LIBRARY)
  INSTALL(FILES FalconComm${COMM_NAME}.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/comm)
  FOREACH(LIB_TYPE STATIC SHARED)
	SET (CURRENT_LIBRARY nifalcon_comm_${COMM_NAME}_${LIB_TYPE})
	ADD_LIBRARY (${CURRENT_LIBRARY} ${LIB_TYPE} FalconComm${COMM_NAME}.cpp)    
	SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${LIBNIFALCON_CPP_COMM_PREFIX}_${LOWER_LIBRARY})
	SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFALCON_VERSION})
	TARGET_LINK_LIBRARIES(${CURRENT_LIBRARY} ${COMM_LIBS})
	INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
	IF(APPLE)
      SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
	ENDIF(APPLE)
  ENDFOREACH(LIB_TYPE)
ENDMACRO(BUILD_NIFALCON_CPP_COMM)

IF(LIBFTDI_FOUND)
  BUILD_NIFALCON_CPP_COMM(LibFTDI ${LIBFTDI_LIBRARIES})
ENDIF(LIBFTDI_FOUND)

IF(LIBFTD2XX_FOUND)
  BUILD_NIFALCON_CPP_COMM(FTD2XX ${LIBFTD2XX_LIBRARIES})
ENDIF(LIBFTD2XX_FOUND)
