SET(NIF_COMPILE_FLAGS)
SET(NIF_LINK_FLAGS)

INCLUDE_DIRECTORIES("..")

SET(CURRENT_LIBRARY ${LIBNIFALCON_CPP_FIRMWARE_NOVINTSDK})

INSTALL(FILES FalconFirmwareNovintSDK.h DESTINATION "/usr/local/include/falcon/comm")
ADD_LIBRARY (${CURRENT_LIBRARY} FalconFirmwareNovintSDK.cpp)    
SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${CURRENT_LIBRARY})
SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFVERSION})
INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION "/usr/local/lib" ARCHIVE DESTINATION "/usr/local/lib")
IF(APPLE)
  SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR "/usr/local/lib")
ENDIF(APPLE)
