SET(NIF_COMPILE_FLAGS)
SET(NIF_LINK_FLAGS)

INCLUDE_DIRECTORIES("..")

SET(CURRENT_LIBRARY ${LIBNIFALCON_CPP_UTIL})

IF(Boost_PROGRAM_OPTIONS_FOUND)
  INSTALL(FILES FalconCLIBase.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/util)
  ADD_LIBRARY (${CURRENT_LIBRARY} FalconCLIBase.cpp)    

  SET(CPP_DEFINES)
  SET(CPP_LINK_LIBS ${LIBNIFALCON_CPP})

  IF(LIBFTDI_FOUND)
	SET(CPP_DEFINES ${CPP_DEFINES} -DLIBFTDI)
	SET(CPP_LINK_LIBS ${CPP_LINK_LIBS} ${LIBNIFALCON_CPP_COMM_LIBFTDI} ${LIBFTDI_LIBRARIES}) 
  ENDIF(LIBFTDI_FOUND)
  IF(LIBFTD2XX_FOUND)
	SET(CPP_DEFINES ${CPP_DEFINES} -DLIBFTD2XX)
	SET(CPP_LINK_LIBS ${CPP_LINK_LIBS} ${LIBNIFALCON_CPP_COMM_FTD2XX} ${LIBFTD2XX_LIBRARIES})
  ENDIF(LIBFTD2XX_FOUND)

  SET_COMPILE_FLAGS (${CURRENT_LIBRARY} ${CPP_DEFINES})
  SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${CURRENT_LIBRARY})
  SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFVERSION})

  TARGET_LINK_LIBRARIES(${CURRENT_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${CPP_LINK_LIBS})
  INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
  IF(APPLE)
    SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
  ENDIF(APPLE)
ENDIF(Boost_PROGRAM_OPTIONS_FOUND)

SET(CURRENT_LIBRARY nifalcon_cpp_device_boostthread)

IF(Boost_THREAD_FOUND)
  ADD_LIBRARY (${CURRENT_LIBRARY} FalconDeviceBoostThread.cpp)    

  SET(CPP_DEFINES)
  SET(CPP_LINK_LIBS ${LIBNIFALCON_CPP})

  SET_COMPILE_FLAGS (${CURRENT_LIBRARY} ${CPP_DEFINES})
  SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${CURRENT_LIBRARY})
  SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFVERSION})

  TARGET_LINK_LIBRARIES(${CURRENT_LIBRARY} ${Boost_THREAD_LIBRARY} ${CPP_LINK_LIBS})
  INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
  IF(APPLE)
    SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
  ENDIF(APPLE)

ENDIF(Boost_THREAD_FOUND)
