SET(NIF_COMPILE_FLAGS)
SET(NIF_LINK_FLAGS)

INCLUDE_DIRECTORIES("../..")

SET(CURRENT_LIBRARY nifalcon_kinematic_stamper)

INSTALL(FILES *.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/kinematic/stamper)
MESSAGE(${GMTL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GMTL_INCLUDE_DIR})

ADD_LIBRARY (${CURRENT_LIBRARY} AngularMatrix.cpp JacobianMatrix.cpp PositionMatrix.cpp DirectKinematic.cpp InverseKinematic.cpp ../FalconKinematicStamper.cpp)    
SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${CURRENT_LIBRARY})
SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFVERSION})
INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
IF(APPLE)
  SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
ENDIF(APPLE)
