SET(NIF_COMPILE_FLAGS)
SET(NIF_LINK_FLAGS)

INCLUDE_DIRECTORIES("../..")

INSTALL(FILES *.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/kinematic/stamper)
INCLUDE_DIRECTORIES(${GMTL_INCLUDE_DIR})

FOREACH(LIB_TYPE STATIC SHARED)
  SET(CURRENT_LIBRARY ${LIBNIFALCON_CPP_KINEMATIC_STAMPER}_${LIB_TYPE})
  ADD_LIBRARY (${CURRENT_LIBRARY} ${LIB_TYPE} AngularMatrix.cpp JacobianMatrix.cpp PositionMatrix.cpp DirectKinematic.cpp InverseKinematic.cpp ../FalconKinematicStamper.cpp)    
  SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES OUTPUT_NAME ${LIBNIFALCON_CPP_KINEMATIC_STAMPER})
  SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES VERSION ${LIBNIFALCON_VERSION})
  SET_TARGET_PROPERTIES (${CURRENT_LIBRARY} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
  INSTALL(TARGETS ${CURRENT_LIBRARY} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR} ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
  IF(APPLE)
	SET_TARGET_PROPERTIES(${CURRENT_LIBRARY} PROPERTIES INSTALL_NAME_DIR ${LIBRARY_INSTALL_DIR})
  ENDIF(APPLE)
ENDFOREACH(LIB_TYPE)
